--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ ul {
 }
 
 .subnav {
+    float: left;
     width: 190px;
     height: 420px;
     background-color: rgba(0, 0, 0, .3);
@@ -113,19 +114,144 @@ ul {
     padding: 0 20px;
 }
 
-.subnav ul li:hover {
+/*.subnav ul li:hover {
     background-color: #0099FF;
-}
+}*/
 
 .subnav ul li a {
     font-size: 14px;
     color: #fff;
 }
 
-/*.subnav ul li a:hover {
+.subnav ul li a:hover {
     color: #0099FF;
-}*/
+}
 
 .subnav ul li a span {
     float: right;
+}
+
+.course {
+    float: right;
+    width: 230px;
+    height: 300px;
+    margin-top: 60px;
+    /*background-color: pink;*/
+    background-color: #fff;
+}
+
+.course h2 {
+    height: 48px;
+    background-color: #a4cde5;
+    color: #fff;
+    font-size: 18px;
+    line-height: 48px;
+    text-align: center;
+}
+
+.course .bd {
+    padding: 0 20px;
+}
+
+.course .bd ul li {
+    padding: 14px 0;
+    border-bottom: 1px solid #a5a5a5;
+}
+
+.course .bd ul li h4 {
+    color: #4e4e4e;
+    font-size: 16px;
+}
+
+.course .bd ul li p {
+    color: #a5a5a5;
+    font-size: 12px;
+}
+
+.course .bd a {
+    display: block;
+    height: 38px;
+    margin-top: 5px;
+    border: 1px solid #00a4ff;
+    color: #00a4ff;
+    text-align: center;
+    line-height: 38px;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.goods {
+    height: 60px;
+    margin-top: 8px;
+    line-height: 60px;
+    background-color: #ffffff;
+    box-shadow: 0 1px 3px 3px rgba(0, 0, 0, .1);
+}
+
+.goods h3 {
+    float: left;
+    padding-left: 30px;
+    font-size: 16px;
+    color: #00a4ff;
+}
+
+.goods ul {
+    float: left;
+    margin-left: 30px;
+}
+
+.goods ul li {
+    float: left;
+}
+
+.goods ul li .goods-item {
+    padding: 0 30px;
+    font-size: 16px;
+    color: #050505;
+    border-left: 1px solid #ccc;
+}
+
+.goods .mod {
+    float: right;
+    padding-right: 30px;
+    font-size: 14px;
+    color: #00a4ff;
+}
+
+.box {
+    margin-top: 30px;
+    /*background-color: #00a4ff;*/
+}
+
+.box .box-hd {
+    height: 45px;
+}
+
+.box .box-hd h3 {
+    float: left;
+    font-size: 20px;
+    color: #494949;
+}
+
+.box .box-hd a {
+    float: right;
+    margin-top: 10px;
+    margin-right: 30px;
+    font-size: 12px;
+    color: #a5a5a5;
+}
+
+.box-bd ul {
+    width: 1215px;
+    height: 200px;
+    /*background-color: #1C036B;*/
+}
+
+.box-bd ul li {
+    float: left;
+    width: 228px;
+    height: 270px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    background-color: pink;
 }
