--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,20 @@ ul {
     list-style: none;
 }
 
+/*清除浮动*/
+.clearfix:before, .clearfix:after {
+    content: '';
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.clearfix {
+    *zoom: 1;
+}
+
 .header {
     height: 42px;
     margin: 30px auto;
@@ -220,7 +234,8 @@ ul {
 
 .box {
     margin-top: 30px;
-    /*background-color: #00a4ff;*/
+    /*height: 300px;
+    background-color: #00a4ff;*/
 }
 
 .box .box-hd {
@@ -243,7 +258,7 @@ ul {
 
 .box-bd ul {
     width: 1215px;
-    height: 200px;
+    /*height: 200px;*/
     /*background-color: #1C036B;*/
 }
 
@@ -253,5 +268,79 @@ ul {
     height: 270px;
     margin-right: 15px;
     margin-bottom: 15px;
-    background-color: pink;
+    background-color: #fff;
+}
+
+.box-bd ul li img {
+    width: 100%;
+}
+
+.box-bd ul li h4 {
+    margin: 20px 20px 20px 25px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #050505;
+}
+
+.box-bd span {
+    color: #ff7c2d;
+}
+
+.box-bd .info {
+    margin: 0 20px 0 25px;
+    font-size: 12px;
+    color: #999;
+}
+
+.footer {
+    height: 415px;
+    /*background-color: pink;*/
+}
+
+.footer .w {
+    padding-top: 50px;
+}
+
+.footer .copyright {
+    float: left;
+}
+
+.footer .copyright p {
+    margin: 20px 0 15px 0;
+    font-size: 12px;
+    color: #666666;
+}
+
+.footer .copyright a {
+    display: block;
+    height: 36px;
+    width: 120px;
+    border: 1px solid #00a4ff;
+    color: #00a4ff;
+    line-height: 36px;
+    text-align: center;
+}
+
+.footer .links {
+    float: right;
+}
+
+.footer .links dl dt {
+    margin-bottom: 14px;
+    color: #333;
+    font-size: 16px;
+}
+
+/*.footer .links dl dd {*/
+/*    margin-bottom: 1px;*/
+/*}*/
+
+.footer .links dl {
+    float: left;
+    margin-left: 100px;
+}
+
+.footer .links dl dd a {
+    color: #333;
+    font-size: 12px;
 }
